--- a/aulas.html
+++ b/aulas.html
@@ -41,7 +41,7 @@
           <!-- Card 1 -->
           <div class="col">
             <div class="card h-100">
-              <img src="Imagens/a3.jpg" class="card-img-top" alt="Imagem 1">
+              <img src="./Imagens/a3.jpg" class="card-img-top" alt="Imagem 1">
               <div class="card-body">
                 <h5 class="card-title">Título da Imagem 1</h5>
                 <p class="card-text">Descrição breve da imagem 1.</p>
@@ -52,7 +52,7 @@
           <!-- Card 2 -->
           <div class="col">
             <div class="card h-100">
-              <img src="Imagens/a4.jpg" class="card-img-top" alt="Imagem 2">
+              <img src="./Imagens/a4.jpg" class="card-img-top" alt="Imagem 2">
               <div class="card-body">
                 <h5 class="card-title">Título da Imagem 2</h5>
                 <p class="card-text">Descrição breve da imagem 2.</p>
@@ -63,7 +63,7 @@
           <!-- Card 3 -->
           <div class="col">
             <div class="card h-100">
-              <img src="/Imagens/a5.jpg" class="card-img-top" alt="Imagem 3">
+              <img src="./Imagens/a5.jpg" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
                 <h5 class="card-title">Título da Imagem 3</h5>
                 <p class="card-text">Descrição breve da imagem 3.</p>
@@ -74,7 +74,7 @@
           <!-- Card 4 -->
           <div class="col">
             <div class="card h-100">
-              <img src="/Imagens/a6.jpg" class="card-img-top" alt="Imagem 3">
+              <img src="./Imagens/a6.jpg" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
                 <h5 class="card-title">Título da Imagem 3</h5>
                 <p class="card-text">Descrição breve da imagem 3.</p>
@@ -85,7 +85,7 @@
           <!-- Card 5 -->
           <div class="col">
             <div class="card h-100">
-              <img src="/Imagens/a1.jpg" class="card-img-top" alt="Imagem 3">
+              <img src="./Imagens/a1.jpg" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
                 <h5 class="card-title">Título da Imagem 3</h5>
                 <p class="card-text">Descrição breve da imagem 3.</p>
@@ -96,7 +96,7 @@
           <!-- Card 6 -->
           <div class="col">
             <div class="card h-100">
-              <img src="/Imagens/a2.jpg" class="card-img-top" alt="Imagem 3">
+              <img src="./Imagens/a2.jpg" class="card-img-top" alt="Imagem 3">
               <div class="card-body">
                 <h5 class="card-title">Título da Imagem 3</h5>
                 <p class="card-text">Descrição breve da imagem 3.</p>
